--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="first-screen__post">
                 <picture>
                     <source media="(max-width: 480px)" srcset="images/header_img320.svg">
-                    <source media="(min-width: 320px)" srcset="images/header_img.svg">
+                    <source media="(max-width: 1000px)" srcset="images/header_img1000.svg">
                     <img class="post__header-img" src="header_img.svg" alt="">
                 </picture>
                 <h1 class="post__wb">
@@ -301,23 +301,6 @@
 
         <input class="range" type="range" id="range" min="1" value="1" step="1" />
 
-
-        <div class="recent-projects__project">
-            <img class="project_img" src="images/IPEPPER.org.png" alt="Brainway">
-            <div class="project__title">
-
-                <p class="title__type">Информационный сайт</p>
-
-                <h3>IPEPPER.org</h3>
-                <p class="type__description">Сайт-библиотека кулинарных рецептов<br>различных кухонь мира. Также
-                    социальная<br>сеть, на площадке которой кулинары<br>общаются,
-                    делятся опытом и дают<br>полезные советы.</p>
-
-                <a href="#">Посмотреть <img src="images/arrow-up-right.svg" alt=""></a>
-
-            </div>
-        </div>
-
         <div class="recent-projects__project">
             <img class="project_img" src="images/Сlear Barn.png" alt="Сlear Barn">
             <div class="project__title">
@@ -404,7 +387,7 @@
             </div>
         </div>
 
-        <div class="recent-projects__project project__alaska">
+        <div class="recent-projects__project">
             <img class="project_img" src="images/alaska trip.png" alt="Brainway">
             <div class="project__title">
 
@@ -414,6 +397,22 @@
                 <p class="type__description">Сервис по поиску и подбору поездок<br>и экскурсий по
                     национальным<br>паркам
                     Аляски. Редизайн главной<br>страницы сайта.</p>
+
+                <a href="#">Посмотреть <img src="images/arrow-up-right.svg" alt=""></a>
+
+            </div>
+        </div>
+
+        <div class="recent-projects__project project__last">
+            <img class="project_img" src="images/IPEPPER.org.png" alt="IPEPPER.org">
+            <div class="project__title">
+
+                <p class="title__type">Информационный сайт</p>
+
+                <h3>IPEPPER.org</h3>
+                <p class="type__description">Сайт-библиотека кулинарных рецептов<br>различных кухонь мира. Также
+                    социальная<br>сеть, на площадке которой кулинары<br>общаются,
+                    делятся опытом и дают<br>полезные советы.</p>
 
                 <a href="#">Посмотреть <img src="images/arrow-up-right.svg" alt=""></a>
 
@@ -807,9 +806,9 @@
     </div>
 
 
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script type="text/javascript" src="js/slick.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="js/slick.min.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
