--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <picture>
                     <source media="(max-width: 480px)" srcset="images/header_img320.svg">
                     <source media="(max-width: 1000px)" srcset="images/header_img1000.svg">
-                    <img class="post__header-img" src="header_img.svg" alt="">
+                    <img class="post__header-img" src="images/header_img.svg" alt="">
                 </picture>
                 <h1 class="post__wb">
                     Web designer <br> UX | UI
