--- a/privacy_policy.html
+++ b/privacy_policy.html
@@ -49,7 +49,7 @@
 
             <nav class="header__menu">
                 <ul class="menu__li">
-                    <li><a href="../index.html#projects" class="current">Проекты</a></li>
+                    <li><a href="/index.html#projects" class="current">Проекты</a></li>
                     <li><a href="#prices">Стоимость</a></li>
                     <li><a href="#stages">Условия</a></li>
                     <li><a href="">Блог</a></li>
